[package]
version = "0.0.1"
name = "yatl"
description = "A simple parser for byte range data"
repository = "https://github.com/mtolmacs/yatl"
readme = "README.md"
documentation = "https://docs.rs/yatl/latest/yatl/"
authors = ["Mark Tolmacs"]
exclude = []
license = "MIT OR Apache-2.0"
keywords = ["parser"]
categories = ["development-tools", "parser"]
homepage = "https://github.com/mtolmacs/yatl"
edition = "2021"

[lib]

[workspace]
members = ["yatl-common", "yatl-core", "yatl-parser", "yatl-generative"]

[dependencies]
proc-macro-error = "1.0.4"
yatl-core = { path = "yatl-core" }

[dev-dependencies]
trybuild = "1.0.71"

[features]
default = ["generative"]
generative = []
