[package]
name = "yatl-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
yatl-parser = { path = "../yatl-parser" }
yatl-generative = { path = "../yatl-generative" }

[lib]
proc-macro = true
